--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "ndarray-gram-schmidt-qr",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Modified Gram-Schmidt Algorithm for QR Factorization",
-  "main": "gram-schmidt.js",
+  "main": "index.js",
   "author": "Ricky Reusser",
   "license": "MIT",
   "repository": {
@@ -25,14 +25,12 @@
     "chai": "*",
     "jshint": "*",
     "mocha": "*",
+    "ndarray": "^1.0.16",
+    "ndarray-ops": "^1.2.2",
     "ndarray-scratch": "^1.1.1",
     "ndgemm": "0.0.0"
   },
   "dependencies": {
-    "cwise": "^1.0.5",
-    "ndarray": "^1.0.16",
-    "ndarray-blas-level1": "^1.0.0",
-    "ndarray-ops": "^1.2.2",
-    "ndarray-scratch": "^1.1.1"
+    "ndarray-blas-level1": "^1.0.0"
   }
 }
